test/bad/syntax1.prog
//missing curly brackets in with
f x = match x + 1 with _ -> 1

